# parabem

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  _config.yml  about.md  archive.md  clean_all.sh  create_doc.sh  index.html  index.md  params.json  pixi.toml  run_all.sh  setup.py
.conda/: meta.yaml
.github/workflows/: ci.yml
.kdev4/: paraBEM.kdev4
_includes/: head.html  sidebar.html
_layouts/: post.html
_posts/: 2014-01-02-first_post 1.md  2015-12-12-sample-post.md  2015-12-13-knitr-lanyon-getting-started.md  2016-06-01-welcome-to-jekyll.markdown  2016-06-02-first.md
_source/: 2015-12-12-sample-post.Rmd  2015-12-13-knitr-lanyon-getting-started.Rmd
cmake/: FindPyEigen.cmake
doc/latex_doc/lyx/: Gleitschirm_Potential_Strömung.lyx
doc/latex_doc/tex/: Gleitschirm_Potential_Strömung.lyx  Gleitschirm_Potential_Strömung.tex  Quellen.bib
doc/tutorial/: tutorial.ipynb  tutorial.tex~
examples/: run_all.py
examples/openglider/: alpha_cL_cD.py  crash.py  lifting_line_opt.py  shape_cl_cd.py  vtk_glider.py  wake_models.py
examples/openglider/glider/: referenz_schirm_berg.json
examples/plots/: 2d_elements.py  airfoil.py  alpha_cL_2d.py  alpha_cL_3d.py  cluster_test.py  cylinder_2d.py  far_field_error.py  far_field_error_src.py  joukowsky_surface.py  joukowsky_wing.py  lifting_line.py  panel_doublet.py  panel_doublet_far.py  panel_doublet_src.py  panel_src.py  panel_src_far.py  sphere_error.py  sphere_error_new.py  vortex.py
examples/tests/: argparse  test_airfoil.py  test_case.py  test_doublet.py  test_doublet_2.py  test_doublet_src.py  test_doublet_velocity.py  test_linear_2d_doublet.py  test_mesh.py  test_parallel.py  test_parallel_2d.py
examples/vtk/: heat_ring.py  heat_simple.py  vtk_airfoil.py  vtk_airfoil_joukowsky.py  vtk_airfoil_linear_dirichlet.py  vtk_airfoil_neumann.py  vtk_airfoil_neumann_source.py  vtk_airfoil_vandevooren.py  vtk_coordinates_not_aligned.py  vtk_cylinder_linear_dirichlet.py  vtk_element2.py  vtk_element_vortex.py  vtk_heat_test.py  vtk_pan3d_obj.py  vtk_panel_doublet.py  vtk_panel_source.py  vtk_parallel_flow.py  vtk_symmetric.py  vtk_vortex_2.py
packaging/conda/: meta.yaml
paraBEM/: CMakeLists.txt~  __init__.py
paraBEM/airfoil/: __init__.py  conformal_mapping.py
paraBEM/liftingline/: __init__.py
paraBEM/mesh/: __init__.py
paraBEM/pan2d/: __init__.py
paraBEM/pan3d/: __init__.py
paraBEM/utils/: __init__.py
paraBEM/vtk_export/: __init__.py
parabem/: __init__.py
parabem/airfoil/: __init__.py
parabem/liftingline/: __init__.py
parabem/mesh/: __init__.py
parabem/pan2d/: __init__.py
parabem/pan3d/: __init__.py
parabem/utils/: __init__.py
parabem/vtk_export/: __init__.py
ppm/: CMakeLists.txt  __init__.py
ppm/airfoil/: CMakeLists.txt  __init__.py
ppm/liftingline/: __init__.py
ppm/mesh/: __init__.py
ppm/pan2d/: __init__.py
ppm/pan3d/: __init__.py
ppm/utils/: __init__.py
ppm/vtk_export/: __init__.py
ppm_tests/: clean_all.sh  run_all.sh  test_it.py
ppm_tests/openglider/: alpha_cL_cD.py  lifting_line_opt.py  shape_cl_cd.py  shape_opt.py  vtk_glider.py  wake_models.py
ppm_tests/openglider/glider/: referenz_schirm_berg.json  referenz_schirm_berg.json.bak
ppm_tests/plots/: 2d_elements.py  airfoil.py  alpha_cL_2d.py  alpha_cL_3d.py  cluster_test.py  cylinder_2d.py  far_field_error.py  far_field_error_src.py  joukowsky_surface.py  joukowsky_wing.py  lifting_line.py  panel_doublet.py  panel_doublet_far.py  panel_doublet_src.py  panel_src.py  panel_src_far.py  sphere_error.py  sphere_error_new.py  vortex.py
ppm_tests/tests/: test_airfoil.py  test_case.py  test_dipol.py  test_dipol_2.py  test_doublet.py  test_doublet_src.py  test_doublet_velocity.py  test_linear_2d_doublet.py  test_mesh.py  test_parallel_2d.py
ppm_tests/vtk/: heat_ring.py  heat_simple.py  vtk_airfoil_joukowsky.py  vtk_airfoil_linear_dirichlet.py  vtk_airfoil_neumann.py  vtk_airfoil_neumann_source.py  vtk_airfoil_vandevooren.py  vtk_coordinates_not_aligned.py  vtk_cylinder_linear_dirichlet.py  vtk_element2.py  vtk_element_vortex.py  vtk_heat_test.py  vtk_matrix_plot.py  vtk_pan3d_obj.py  vtk_panel_doublet.py
src/: CMakeLists.txt  case2.cpp  case2.h  case3.cpp  case3.h  element_influence.cpp  element_influence.h  json.cpp  lifting_line.cpp  lifting_line.h  main.cpp  panel2.cpp  panel2.h  panel3.cpp  panel3.h  paraBEM_ext.cpp  ppm_ext.cpp  ppm_ext_1.cpp  ppm_wrap.cpp  ppm_wrap.h  vector.h
src/headers/: case2.h  case3.h  element_influence.h  lifting_line.h  panel2.h  panel3.h  vector.h
src/python/: CMakeLists.txt  paraBEM_ext.cpp  parabem_ext.cpp
unittests/: panel2_influence.py  panel3_influence.py
